idf_component_register(
  SRCS
    "src/CanvasView.cpp"
    "src/Command.cpp"
    "src/CompositeView.cpp"
    "src/Display.cpp"
    "src/LcdgfxDisplay.cpp"
    "src/Led.cpp"
    "src/Notification.cpp"
    "src/Parser.cpp"
    "src/RotEnc.cpp"
    "src/TextView.cpp"
    "src/ViewController.cpp"
    "src/netdisp.cpp"
    "src/ExtraFonts.c"
  INCLUDE_DIRS
    "include"
)
