idf_component_register(
  SRCS
    "src/ByteStream.cpp"
    "src/CanvasView.cpp"
    "src/Command.cpp"
    "src/CommandBuilder.cpp"
    "src/CompositeView.cpp"
    "src/Display.cpp"
    "src/ExtraFonts.c"
    "src/LcdgfxDisplay.cpp"
    "src/Led.cpp"
    "src/Notification.cpp"
    "src/Parser.cpp"
    "src/RotEnc.cpp"
    "src/TextView.cpp"
    "src/ViewController.cpp"
    "src/netdisp.cpp"
    "src/CommandBase.cpp"
  INCLUDE_DIRS
    "include"
)
